syntax = "proto3";

package domain.command;

option java_package = "fr.aquabian.api.domain.command";
import "google/protobuf/timestamp.proto";

message AquabianCommand {
    oneof command {
        CreateDeviceCommand createDeviceCommand =1;
        AddSensorToDeviceCommand addSensorToDeviceCommand =2;
        CreateSensorCommand createSensorCommand =3;
        AddMeasureCommand addMeasureCommand =4;
        RenameSensorCommand renameSensorCommand =5;
    }
}

//Device command
message CreateDeviceCommand {
    string id = 1;
    string name = 2;
    repeated string sensors = 3;
}

message AddSensorToDeviceCommand {
    string id = 1;
    string idSensor = 2;
}

//Sensor command
message CreateSensorCommand {
    string id = 1;
    string name = 2;
    string device = 3;
}

message AddMeasureCommand {
    string id = 1;
    double value = 2;
    google.protobuf.Timestamp date = 3;
}

message RenameSensorCommand {
    string id = 1;
    string name = 2;
}

