syntax = "proto3";

package projection.sensor;

option java_package = "fr.aquabian.api.projection.command";

import "google/protobuf/timestamp.proto";
import "fr/aquabian/domain/event/AquabianEvents.proto";

message SensorProjectionEvent {
    oneof event {
        CurrentStateEvent currentStateEvent =1;
        AddSensorEvent addSensorEvent =2;
        AddMeasureEvent addMeasureEvent =3;
        RemoveMeasureEvent removeMeasureEvent =4;
        domain.event.SensorRenamedEvent sensorRenamedEvent =5;
    }
}

message CurrentStateEvent {
   repeated Sensor sensors = 1;
}

message AddSensorEvent {
    Sensor sensor = 1;
}
message AddMeasureEvent {
    string id =1;
    Measure measure =2;
}
message RemoveMeasureEvent {
    string id =1;
    Measure measure =2;
}

message Sensor {
    string id =1;
    string name = 2;
    string deviceId = 3;
    string deviceName = 4;
    repeated Measure measures =5;
}

message Measure{
    double value = 1;
    google.protobuf.Timestamp date = 2;
}


//Query
message GraphQuery{
    oneof query {
        SlidingWindowQuery slidingWindowQuery = 1;
        PastWindowQuery pastWindowQuery = 2;
    }
}

message SlidingWindowQuery{
    uint64 afterglowSec = 1;
}

message PastWindowQuery{
    google.protobuf.Timestamp dateMin = 1;
    google.protobuf.Timestamp dateMax = 2;
}